Added card section with scss

--- a/index.html
+++ b/index.html
@@ -27,6 +27,95 @@
             <span class="button__body">Reset</span>
             <span class="button__append">Cancel</span>
         </a>
+
+
+        <div class="card__section">
+            <article class="card__item">
+                <aside class="card__aside">
+                    <figure class="card__figure">
+                        <img src="https://satyr.io/400x200?text=card__image" alt="Dummy Image" class="card__image">
+                        </figure>
+                </aside>
+                <header class="card__header">
+                    <h2 class="card__title">Card Title</h2>
+                    <h3 class="card__subtitle">Card Subtitle</h3>
+                </header>
+                <div class="card__body">
+                    <p class="card__copy">
+                        Wayfarers locavore vape gentrify salvia pop-up. 
+                        Pickled flannel four dollar toast stumptown deep v freegan celiac street art sustainable cliche. 
+                        Man braid cornhole green juice,
+                        plaid schlitz pabst 
+                        knausgaard pinterest chartreuse everyday carry yr. 
+                        Live-edge pok pok hella, iPhone af tacos leggings lo-fi everyday carry tousled pinterest cloud bread single-origin coffee sustainable vice.
+                    </p>
+                </div>
+                <footer class="card__footer">
+                    <div class="card__actions">
+                        <button class="card__button">
+                            Button
+                        </button>
+                    </div>
+                </footer>
+            </article>
+            <article class="card__item">
+                <aside class="card__aside">
+                    <figure class="card__figure">
+                        <img src="https://satyr.io/400x200?text=card__image" alt="Dummy Image" class="card__image">
+                        </figure>
+                </aside>
+                <header class="card__header">
+                    <h2 class="card__title">Card Title</h2>
+                    <h3 class="card__subtitle">Card Subtitle</h3>
+                </header>
+                <div class="card__body">
+                    <p class="card__copy">
+                        Wayfarers locavore vape gentrify salvia pop-up. 
+                        Pickled flannel four dollar toast stumptown deep v freegan celiac street art sustainable cliche. 
+                        Man braid cornhole green juice,
+                        plaid schlitz pabst 
+                        knausgaard pinterest chartreuse everyday carry yr. 
+                        Live-edge pok pok hella, iPhone af tacos leggings lo-fi everyday carry tousled pinterest cloud bread single-origin coffee sustainable vice.
+                    </p>
+                </div>
+                <footer class="card__footer">
+                    <div class="card__actions">
+                        <button class="card__button">
+                            Button
+                        </button>
+                    </div>
+                </footer>
+            </article>
+            <article class="card__item">
+                <aside class="card__aside">
+                    <figure class="card__figure">
+                        <img src="https://satyr.io/400x200?text=card__image" alt="Dummy Image" class="card__image">
+                        </figure>
+                </aside>
+                <header class="card__header">
+                    <h2 class="card__title">Card Title</h2>
+                    <h3 class="card__subtitle">Card Subtitle</h3>
+                </header>
+                <div class="card__body">
+                    <p class="card__copy">
+                        Wayfarers locavore vape gentrify salvia pop-up. 
+                        Pickled flannel four dollar toast stumptown deep v freegan celiac street art sustainable cliche. 
+                        Man braid cornhole green juice,
+                        plaid schlitz pabst 
+                        knausgaard pinterest chartreuse everyday carry yr. 
+                        Live-edge pok pok hella, iPhone af tacos leggings lo-fi everyday carry tousled pinterest cloud bread single-origin coffee sustainable vice.
+                    </p>
+                </div>
+                <footer class="card__footer">
+                    <div class="card__actions">
+                        <button class="card__button">
+                            Button
+                        </button>
+                    </div>
+                </footer>
+            </article>
+        </div>
+        
         
         <!-- <script src="" async defer></script> -->
     </body>
