Added checkbox section

--- a/index.html
+++ b/index.html
@@ -128,6 +128,17 @@
             </li>
             <li class="list__item">four</li>
         </ul>
+
+        <label for="MyCheckbox" class="checkbox">
+            <input type="checkbox" class="checkbox__input" id="MyCheckbox">
+            <div class="checkbox__body">
+                <span class="checkbox__label">My Checkbox</span>
+                <br>
+                <span class="checkbox__help">
+                    Here you find some useful help Text with a <a href="#" omit>Link</a>
+                </span>
+            </div>
+        </label>
         
         
         <!-- <script src="" async defer></script> -->
