Added grid items & modal

--- a/index.html
+++ b/index.html
@@ -139,6 +139,24 @@
                 </span>
             </div>
         </label>
+
+        <div class="grid">
+            <div class="item"><span>item 1</span></div>
+            <div class="item"><span>item 2</span></div>
+            <div class="item"><span>item 3</span></div>
+            <div class="item"><span>item 4</span></div>
+            <div class="item"><span>item 5</span></div>
+        </div>
+
+        <div class="modal">
+            <div class="modal__main">I'm baby subway tile chartreuse photo booth scenester tilde 
+                hashtag kickstarter. Raclette pinterest crucifix, kickstarter mustache church-key 
+                cloud bread chillwave wolf direct trade tacos. Migas occupy PBR&B tbh banh mi. 
+                Edison bulb street art offal chillwave hexagon banh mi palo santo hell of selfies 
+                messenger bag microdosing af occupy godard health goth. Letterpress pour-over chia 
+                viral pinterest, air plant wolf single-origin coffee chillwave 
+                copper mug williamsburg truffaut kale chips jean shorts.</div>
+        </div>
         
         
         <!-- <script src="" async defer></script> -->
