Added different css rules for container

--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
                 viral pinterest, air plant wolf single-origin coffee chillwave 
                 copper mug williamsburg truffaut kale chips jean shorts.</div>
         </div>
+
+        <div class="container">
+            <div class="box-1"></div>
+        </div>
         
         
         <!-- <script src="" async defer></script> -->
