--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="icon" href="https://www.pngitem.com/pimgs/m/112-1127775_transparent-vector-clipart-software-transparent-code-icon-png.png">
         <title>Block Element Modifier Tutorials</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
